<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show1"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="0dp"
            android:gravity="end"
            android:text="@string/number_0"
            android:textAllCaps="false"
            android:textSize="36sp"
            android:typeface="sans"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/show2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:maxLines="1"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/number_0"
            android:textAllCaps="false"
            android:textSize="29sp"
            android:typeface="sans" />
    </LinearLayout>



    <GridLayout
        android:id="@+id/ButtonList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:padding="10dp"
        android:rowCount="5"
        android:visibility="visible">

        <Button
            android:id="@+id/ac"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_color_operate"
            android:text="@string/ac"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/del"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_color_operate"
            android:text="@string/del"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/times"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_color_operate"
            android:text="@string/times"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/divide"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_color_operate"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_7"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_7"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_8"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_8"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_9"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_9"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/minus"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_color_operate"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_4"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_4"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_5"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_5"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_6"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_6"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/and"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_color_operate"
            android:text="@string/and"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_1"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_1"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_2"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_2"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_3"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_3"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/equal"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="140dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_rowSpan="2"
            android:background="@drawable/btn_equal"
            android:text="@string/equal"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/number_0"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/number_0"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/point"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="10dp"
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_round_number"
            android:text="@string/point"
            android:textSize="17sp"/>

    </GridLayout>

</LinearLayout>